--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -55,6 +56,9 @@ dependencies {
     implementation 'com.github.kizitonwose:CalendarView:1.1.0'
     //MpAndroidChart Dependencies
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    //RoomDB Dependencies
+    implementation "androidx.room:room-runtime:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
