--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
         </activity>
         <activity android:name=".ui.activity.DiaryWriteActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.SettingBackUpActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.SettingDiaryActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.SettingCountActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
