--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".ui.activity.SettingCountActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.DiaryShowActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
