--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,8 +60,10 @@ dependencies {
     implementation "androidx.room:room-runtime:2.4.3"
     kapt "androidx.room:room-compiler:2.4.3"
     implementation "androidx.room:room-ktx:2.4.3"
-    //----Room File BackUp & Restore dependencies Add----
+    //Room File BackUp & Restore dependencies Add
     implementation 'de.raphaelebner:roomdatabasebackup:1.0.0-beta10'
+    //Google AdMob Dependencies
+    implementation 'com.google.android.gms:play-services-ads:21.4.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
