--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation 'de.raphaelebner:roomdatabasebackup:1.0.0-beta10'
     //Google AdMob Dependencies
     implementation 'com.google.android.gms:play-services-ads:21.4.0'
+    //ProcessPhoenix Dependencies
+    implementation 'com.jakewharton:process-phoenix:2.1.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
